[project]
name = "multiserver-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.45.0",
    "cryptography>=44.0.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.2.0",
    "pymongo>=4.10.1",
    "requests>=2.32.3",
]
